# BBC-to-epub

./: .gitignore  MANIFEST.in  config.py  content.py  creator.py  main.py  pyproject.toml  readme.md  requirements.txt  templating.py  user_config.json  user_input.txt  utils.py
src/bbcepub/: __main__.py  content.py  creator.py  main.py  utils.py
src/bbcepub.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/bbcepub/static/: titlepage.xhtml
src/bbcepub/templates/: content.opf
static/: page_styles.css  stylesheets.css
templates/: content.html  content.opf  toc.ncx
