[project]
name = "bbcepub"
version = "0.0.2"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "readme.md"
requires-python = ">=3.7"
dependencies = [
  'beautifulsoup4==4.12.2',
  'certifi==2023.5.7',
  'charset-normalizer==3.2.0',
  'idna==3.4',
  'Jinja2==3.1.2',
  'MarkupSafe==2.1.3',
  'requests==2.31.0',
  'soupsieve==2.4.1',
  'urllib3==2.0.4',
]

[tool.setuptools]
packages = ["bbcepub"]
package-dir = {"" = "src"}
